dep/grpc-service/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grpc-service
  labels:
    service: grpc-service
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: grpc-service
    spec:
      containers:
      - command: ['/usr/local/bin/start_service.sh']
        name: grpc-service
        image: gcr.io/api-project-483163119575/grpc-service
        resources: {}
      - name: envoy-sidecar
        image: gcr.io/api-project-483163119575/envoy-sidecar
        command: ['/usr/local/bin/envoy']
        args: ['-c', '/etc/envoy-config.yaml', '--service-cluster', 'grpc-service', '-l', 'debug']
        resources: {}
        volumeMounts:
        - name: grpc-service-claim0
          mountPath: /var/logs/zipkin/grpc-service
        - name: envoy-config-grpc-service
          mountPath: /etc
      restartPolicy: Always
      volumes:
      - name: grpc-service-claim0
        persistentVolumeClaim:
          claimName: grpc-service-claim0
      - name: envoy-config-grpc-service
        configMap:
          name: envoy-config-grpc-service
          items:
            - key: config
              path: envoy-config.yaml
status: {}
