dep/grpc-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grpc-service
  labels:
    service: grpc-service
spec:
  clusterIP: None
  ports:
  - name: headless
    port: 55555
    targetPort: 0
  selector:
    service: grpc-service
status:
  loadBalancer: {}
